--- a/xSelectBlock/xSelectBlock.vcxproj
+++ b/xSelectBlock/xSelectBlock.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClCompile Include="plugin.cpp" />
     <ClCompile Include="pluginmain.cpp" />
+    <ClCompile Include="SelectBlockDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="plugin.h" />
@@ -242,6 +243,7 @@
     <ClInclude Include="pluginsdk\_scriptapi_stack.h" />
     <ClInclude Include="pluginsdk\_scriptapi_symbol.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SelectBlockDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="pluginsdk\capstone\capstone_x64.lib">
