--- a/xSelectBlock/xSelectBlock.vcxproj.filters
+++ b/xSelectBlock/xSelectBlock.vcxproj.filters
@@ -284,6 +284,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SelectBlockDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="pluginsdk\x32bridge.lib">
@@ -346,6 +349,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pluginmain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectBlockDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
