Added possibility to switch inputs with tab, accept with return and quit with esc, implemented #1

--- a/xSelectBlock/selectDialog.rc
+++ b/xSelectBlock/selectDialog.rc
@@ -64,8 +64,8 @@ BEGIN
     GROUPBOX        "",ID_GROUPBOX,5,94,162,20
     CONTROL         "hex",IDC_HEX_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,16,101,36,10
     CONTROL         "dec",IDC_DEC_RADIO,"Button",BS_AUTORADIOBUTTON,68,101,28,10
-    PUSHBUTTON      "OK",IDC_BUTTON_OK,64,118,50,14
-    PUSHBUTTON      "Cancel",IDC_BUTTON_CANCEL,117,118,50,14
+    DEFPUSHBUTTON   "OK",IDC_BUTTON_OK,64,118,50,14,NOT WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDC_BUTTON_CANCEL,117,118,50,14,NOT WS_TABSTOP
     CONTROL         "oct",IDC_OCT_RADIO,"Button",BS_AUTORADIOBUTTON,128,101,25,10
 END
 
